--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "babel-preset-stage-2": "^6.5.0",
     "browser-sync": "^2.12.5",
     "clean-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "jquery": "^2.2.3",
-    "webpack": "^1.13.0"
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "babel-runtime": "^6.6.1"
