--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --inline"
   },
   "author": "Yuji Ito",
   "license": "ISC",
@@ -16,7 +16,6 @@
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
-    "browser-sync": "^2.12.5",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
@@ -28,7 +27,9 @@
     "jquery": "^2.2.3",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.1"
   },
   "dependencies": {
     "babel-runtime": "^6.6.1"
