--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^2.2.3",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
